[CUSTOM CHANGES] Add ChromosomeUtil and ChromosomeUtilTest for chromosome-related checks and manipulations; add new counters to InputValidationCommand; ensure chromosomes are not repeated accross files; print chromosomes in correct order.